var helyett let

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         function oldalstart()
         {
             for (let i = 0; i < 10; i++) {
-                var cb = document.createElement("input");
+                let cb = document.createElement("input");
                 cb.setAttribute("type","checkbox")
                 cb.setAttribute("value",i)
                 cb.setAttribute("name","csekboxok")
